--- a/deskover-ecommerce-website/src/main/resources/templates/item.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/item.html
@@ -6,7 +6,7 @@
     )}">
 
 <head>
-    <title>Title of About Page</title>
+    <title>Deskover: <th:block th:text="${product.name}"></th:block></title>
 </head>
 
 <body id="content">
@@ -23,12 +23,12 @@
                             <li class="breadcrumb-item"><a class="text-nowrap" href="index.html"><i class="ci-home"></i>Home</a></li>
                             <li class="breadcrumb-item text-nowrap"><a href="shop-grid-ls.html">Shop</a>
                             </li>
-                            <li class="breadcrumb-item text-nowrap active" aria-current="page">Cart</li>
+                            <li class="breadcrumb-item text-nowrap active" aria-current="page"><th:block th:text="${product.name}"></th:block></li>
                         </ol>
                     </nav>
                 </div>
                 <div class="order-lg-1 pe-lg-4 text-center text-lg-start">
-                    <h1 class="h3 text-light mb-0">Your cart</h1>
+                    <h1 class="h3 text-light mb-0"><th:block th:text="${product.name}"></th:block></h1>
                 </div>
             </div>
         </div>
@@ -70,27 +70,8 @@
                                 <!-- Product details-->
                                 <div class="col-lg-5 pt-4 pt-lg-0">
                                     <div class="product-details ms-auto pb-3">
-                                        <div class="h3 fw-normal text-accent mb-3 me-1">$124.<small>99</small></div>
+                                        <div class="h3 fw-normal text-accent mb-3 me-1"><th:block th:text="${#numbers.formatCurrency(product.price)}"></th:block> <small>VND</small></div>
                                         <div class="fs-sm mb-4"><span class="text-heading fw-medium me-1">Color:</span><span class="text-muted" id="colorOption">Dark blue/Orange</span></div>
-                                        <div class="position-relative me-n4 mb-3">
-                                            <div class="form-check form-option form-check-inline mb-2">
-                                                <input class="form-check-input" type="radio" name="color" id="color1" data-bs-label="colorOption" value="Dark blue/Orange" checked>
-                                                <label class="form-option-label rounded-circle" for="color1"><span class="form-option-color rounded-circle" style="background-color: #f25540;"></span></label>
-                                            </div>
-                                            <div class="form-check form-option form-check-inline mb-2">
-                                                <input class="form-check-input" type="radio" name="color" id="color2" data-bs-label="colorOption" value="Dark blue/Green">
-                                                <label class="form-option-label rounded-circle" for="color2"><span class="form-option-color rounded-circle" style="background-color: #65805b;"></span></label>
-                                            </div>
-                                            <div class="form-check form-option form-check-inline mb-2">
-                                                <input class="form-check-input" type="radio" name="color" id="color3" data-bs-label="colorOption" value="Dark blue/White">
-                                                <label class="form-option-label rounded-circle" for="color3"><span class="form-option-color rounded-circle" style="background-color: #f5f5f5;"></span></label>
-                                            </div>
-                                            <div class="form-check form-option form-check-inline mb-2">
-                                                <input class="form-check-input" type="radio" name="color" id="color4" data-bs-label="colorOption" value="Dark blue/Black">
-                                                <label class="form-option-label rounded-circle" for="color4"><span class="form-option-color rounded-circle" style="background-color: #333;"></span></label>
-                                            </div>
-                                            <div class="product-badge product-available mt-n1"><i class="ci-security-check"></i>Product available</div>
-                                        </div>
                                         <div class="d-flex align-items-center pt-2 pb-4">
                                             <select class="form-select me-3" style="width: 5rem;">
                                                 <option value="1">1</option>
@@ -99,71 +80,40 @@
                                                 <option value="4">4</option>
                                                 <option value="5">5</option>
                                             </select>
-                                            <button class="btn btn-primary btn-shadow d-block w-100" type="button"><i class="ci-cart fs-lg me-2"></i>Add to Cart</button>
+                                            <button class="btn btn-primary btn-shadow d-block w-100" type="button"><i class="ci-cart fs-lg me-2"></i>Thêm vào giỏ hàng</button>
                                         </div>
                                         <div class="d-flex mb-4">
                                             <div class="w-100 me-3">
-                                                <button class="btn btn-secondary d-block w-100" type="button"><i class="ci-heart fs-lg me-2"></i><span class='d-none d-sm-inline'>Add
-                                                        to </span>Wishlist</button>
+                                                <button class="btn btn-secondary d-block w-100" type="button"><i class="ci-heart fs-lg me-2"></i><span class='d-none d-sm-inline'>Thêm vào </span>yêu thích</button>
                                             </div>
                                             <div class="w-100">
-                                                <button class="btn btn-secondary d-block w-100" type="button"><i class="ci-compare fs-lg me-2"></i>Compare</button>
+                                                <button class="btn btn-secondary d-block w-100" type="button"><i class="ci-compare fs-lg me-2"></i>So sánh</button>
                                             </div>
                                         </div>
                                         <!-- Product panels-->
                                         <div class="accordion mb-4" id="productPanels">
                                             <div class="accordion-item">
-                                                <h3 class="accordion-header"><a class="accordion-button" href="#shippingOptions" role="button" data-bs-toggle="collapse" aria-expanded="true" aria-controls="shippingOptions"><i class="ci-delivery text-muted lead align-middle mt-n1 me-2"></i>Shipping
-                                                        options</a></h3>
+                                                <h3 class="accordion-header"><a class="accordion-button" href="#shippingOptions" role="button" data-bs-toggle="collapse" aria-expanded="true" aria-controls="shippingOptions"><i class="ci-delivery text-muted lead align-middle mt-n1 me-2"></i>Hình thức nhận hàng</a></h3>
                                                 <div class="accordion-collapse collapse show" id="shippingOptions" data-bs-parent="#productPanels">
                                                     <div class="accordion-body fs-sm">
                                                         <div class="d-flex justify-content-between border-bottom pb-2">
                                                             <div>
-                                                                <div class="fw-semibold text-dark">Local courier shipping
-                                                                </div>
+                                                                <div class="fw-semibold text-dark">Vận chuyển tới nhà cho đơn hàng dưới 500,000 VND</div>
                                                                 <div class="fs-sm text-muted">2 - 4 days</div>
                                                             </div>
-                                                            <div>$16.50</div>
-                                                        </div>
-                                                        <div class="d-flex justify-content-between border-bottom py-2">
-                                                            <div>
-                                                                <div class="fw-semibold text-dark">UPS ground shipping</div>
-                                                                <div class="fs-sm text-muted">4 - 6 days</div>
-                                                            </div>
-                                                            <div>$19.00</div>
+                                                            <div>30,000 VND</div>
                                                         </div>
                                                         <div class="d-flex justify-content-between pt-2">
                                                             <div>
-                                                                <div class="fw-semibold text-dark">Local pickup from store
-                                                                </div>
+                                                                <div class="fw-semibold text-dark">Tới cửa hàng nhận</div>
                                                                 <div class="fs-sm text-muted">&mdash;</div>
                                                             </div>
-                                                            <div>$0.00</div>
+                                                            <div>0 VND</div>
                                                         </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="accordion-item">
-                                                <h3 class="accordion-header"><a class="accordion-button collapsed" href="#localStore" role="button" data-bs-toggle="collapse" aria-expanded="true" aria-controls="localStore"><i class="ci-location text-muted fs-lg align-middle mt-n1 me-2"></i>Find
-                                                        in local store</a></h3>
-                                                <div class="accordion-collapse collapse" id="localStore" data-bs-parent="#productPanels">
-                                                    <div class="accordion-body">
-                                                        <select class="form-select">
-                                                            <option value>Select your country</option>
-                                                            <option value="Argentina">Argentina</option>
-                                                            <option value="Belgium">Belgium</option>
-                                                            <option value="France">France</option>
-                                                            <option value="Germany">Germany</option>
-                                                            <option value="Spain">Spain</option>
-                                                            <option value="UK">United Kingdom</option>
-                                                            <option value="USA">USA</option>
-                                                        </select>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
-                                        <!-- Sharing-->
-                                        <label class="form-label d-inline-block align-middle my-2 me-3">Share:</label><a class="btn-share btn-twitter me-2 my-2" href="#"><i class="ci-twitter"></i>Twitter</a><a class="btn-share btn-instagram me-2 my-2" href="#"><i class="ci-instagram"></i>Instagram</a><a class="btn-share btn-facebook my-2" href="#"><i class="ci-facebook"></i>Facebook</a>
                                     </div>
                                 </div>
                             </div>
