--- a/deskover-ecommerce-website/src/main/resources/templates/components/header.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/components/header.html
@@ -14,5 +14,6 @@
     <link rel="stylesheet" media="screen" th:href="@{/vendor/simplebar/dist/simplebar.min.css}" />
     <link rel="stylesheet" media="screen" th:href="@{/vendor/tiny-slider/dist/tiny-slider.css}" />
     <link rel="stylesheet" media="screen" th:href="@{/vendor/drift-zoom/dist/drift-basic.min.css}" />
+    <link rel="stylesheet" media="screen" th:href="@{/vendor/nouislider/dist/nouislider.min.css}" / >
     <link rel="stylesheet" media="screen" th:href="@{/vendor/lightgallery.js/dist/css/lightgallery.min.css}" />
 </head>
