--- a/deskover-ecommerce-website/src/main/resources/templates/layout/layout.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/layout/layout.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" th:fragment="layout (title, modal, main)">
+<html xmlns:th="http://www.thymeleaf.org" th:fragment="layout (title, modal, handheld, main)" ng-app="app">
 
 <head>
     <title th:replace="${title}">title</title>
     <th:block th:include="components/header.html :: header"></th:block>
     <!-- Vendor Styles including: Font Icons, Plugins, etc.-->
-    <link rel="stylesheet" media="screen" href="vendor/simplebar/dist/simplebar.min.css" />
-    <link rel="stylesheet" media="screen" href="vendor/tiny-slider/dist/tiny-slider.css" />
-    <link rel="stylesheet" media="screen" href="vendor/drift-zoom/dist/drift-basic.min.css" />
-    <link rel="stylesheet" media="screen" href="vendor/lightgallery.js/dist/css/lightgallery.min.css" />
+    <link rel="stylesheet" media="screen" th:href="@{/vendor/simplebar/dist/simplebar.min.css}" />
+    <link rel="stylesheet" media="screen" th:href="@{/vendor/tiny-slider/dist/tiny-slider.css}" />
+    <link rel="stylesheet" media="screen" th:href="@{/vendor/drift-zoom/dist/drift-basic.min.css}" />
+    <link rel="stylesheet" media="screen" th:href="@{/vendor/lightgallery.js/dist/css/lightgallery.min.css}" />
 </head>
 
 <body class="handheld-toolbar-enabled">
@@ -26,6 +26,8 @@
 
     <!-- Footer-->
     <th:block th:replace="components/footer.html :: footer"></th:block>
+    <th:block th:replace="${handheld} ?: ~{}"></th:block>
+    <!-- Back To Top Button--><a class="btn-scroll-top" href="#top" data-scroll><span class="btn-scroll-top-tooltip text-muted fs-sm me-2"></span><i class="btn-scroll-top-icon ci-arrow-up"></i></a>
     <th:block th:include="components/scripts.html :: scripts"></th:block>
 </body>
 
