Update Product Management

--- a/deskover-dashboard-website/src/app/components/ckeditor/ckeditor.component.html
+++ b/deskover-dashboard-website/src/app/components/ckeditor/ckeditor.component.html
@@ -1,6 +1,8 @@
 <ckeditor
   [editor]="Editor"
   [id]="id"
-  [(ngModel)]="bindingValue"
+  [name]="name"
+  [(ngModel)]="value"
   [config]="config"
+  (ready)="onReady($event)"
 ></ckeditor>
