--- a/deskover-dashboard-website/src/app/pages/promotion/promotion.component.html
+++ b/deskover-dashboard-website/src/app/pages/promotion/promotion.component.html
@@ -33,7 +33,7 @@
           </div>
           <div class="col d-flex align-items-center justify-content-end">
             <button type="button" class="btn bg-faded-accent rounded-pill" (click)="newDiscount()" placement="left"
-                    ngbTooltip="Thêm">
+                    tooltip="Thêm">
               <i class="fas fa-plus text-accent"></i>
             </button>
           </div>
@@ -71,16 +71,16 @@
               </td>
               <td class="align-middle text-end">
                 <div *ngIf="isActive" class="d-flex align-items-center justify-content-end">
-                  <button type="button" class="btn btn-product btn-sm bg-faded-warning me-1" placement="top" ngbTooltip="Sản phẩm khuyến mãi"
+                  <button type="button" class="btn btn-product btn-sm bg-faded-warning me-1" placement="top" tooltip="Sản phẩm khuyến mãi"
                           (click)="getProduct(item.id)">
                     <i class="fas fa-pen-square text-warning"></i>
                   </button>
-                  <button type="button" class="btn btn-sm bg-faded-info me-1" placement="top" ngbTooltip="Sửa"
+                  <button type="button" class="btn btn-sm bg-faded-info me-1" placement="top" tooltip="Sửa"
                           (click)="getDiscount(item.id)">
                     <i class="fas fa-pen-square text-info"></i>
                   </button>
                   <button type="button" class="btn btn-sm bg-faded-danger" (click)="deleteDiscount(item.id)"
-                          placement="top" ngbTooltip="Xoá" container="body">
+                          placement="top" tooltip="Xoá" container="body">
                     <i class="fas fa-trash text-danger"></i>
                   </button>
                 </div>
