Update product management

--- a/deskover-dashboard-website/src/assets/scss/_common.scss
+++ b/deskover-dashboard-website/src/assets/scss/_common.scss
@@ -7,12 +7,11 @@
 .bs-datepicker-body table td.selected span,
 .bs-datepicker-body table td span[class*="select-"]:after,
 .bs-datepicker-body table td[class*="select-"] span:after,
-.bs-datepicker-body table td.active-week span:hover
-{
+.bs-datepicker-body table td.active-week span:hover {
   background-color: $primary !important;
 }
-.bs-datepicker-body table td.week span
-{
+
+.bs-datepicker-body table td.week span {
   color: $primary !important;
 }
 
