--- a/deskover-ecommerce-website/src/main/resources/templates/components/navigation_header.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/components/navigation_header.html
@@ -5,30 +5,30 @@
                         <div class="topbar-text d-md-none">
                                 <a class="topbar-link" href="tel:00331697720"><i class="ci-support text-muted me-2"></i>(00) 33 169 7720</a>
                         </div>
-                        <div class="topbar-text text-nowrap d-none d-md-inline-block"><i class="ci-support"></i><span class="text-muted me-1">Help</span><a class="topbar-link" href="tel:00331697720">(00) 33 169 7720</a></div>
+                        <div class="topbar-text text-nowrap d-none d-md-inline-block"><i class="ci-support"></i><span class="text-muted me-1">Hổ trợ</span><a class="topbar-link" href="tel:00331697720">(00) 33 169 7720</a></div>
                         <div class="d-none d-md-block">
 
                         </div>
-                        <div class="topbar-text dropdown d-md-none ms-auto"><a class="topbar-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Má»Ÿ rá»™ng</a>
+                        <div class="topbar-text dropdown d-md-none ms-auto"><a class="topbar-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Mở rộng</a>
                                 <ul class="dropdown-menu dropdown-menu-end">
                                         <li><a class="dropdown-item" th:href="@{/wishlist}">
-                                                        <i class="ci-heart text-muted me-2"></i>Wishlist (3)</a></li>
+                                                        <i class="ci-heart text-muted me-2"></i>Yêu thích (3)</a></li>
                                         <li><a class="dropdown-item" th:href="@{/comparison}">
-                                                        <i class="ci-compare text-muted me-2"></i>Comparison (3)</a></li>
+                                                        <i class="ci-compare text-muted me-2"></i>So sánh  (3)</a></li>
                                         <li><a class="dropdown-item" th:href="@{/tracking}">
-                                                        <i class="ci-truck text-muted me-2"></i>Tracking</a>
+                                                        <i class="ci-truck text-muted me-2"></i>Tra cứu đơn hàng </a>
                                         </li>
                                 </ul>
                         </div>
                         <div class="d-none d-md-block ms-3 text-nowrap">
                                 <a class="topbar-link d-none d-md-inline-block" th:href="@{/wishlist}">
-                                        <i class="ci-heart mt-n1"></i>Wishlist (3)
+                                        <i class="ci-heart mt-n1"></i>Yêu thích (3)
                                 </a>
                                 <a class="topbar-link ms-3 ps-3 border-start border-light d-none d-md-inline-block" th:href="@{/comparison}">
-                                        <i class="ci-compare mt-n1"></i>Comparison (3)
+                                        <i class="ci-compare mt-n1"></i>So sánh (3)
                                 </a>
                                 <a class="topbar-link ms-3 border-start border-light ps-3 d-none d-md-inline-block" th:href="@{/tracking}">
-                                        <i class="ci-truck mt-n1"></i>Tracking
+                                        <i class="ci-truck mt-n1"></i>Tra cứu đơn hàng 
                                 </a>
                         </div>
                 </div>
